--- a/Resources/views/Form/jquery_layout.html.twig
+++ b/Resources/views/Form/jquery_layout.html.twig
@@ -43,31 +43,37 @@
 
 {% block genemu_tinymce_javascript %}
 {% spaceless %}
-    {% if configs.script_url is defined %}
-        {% set configs = configs|merge({
-            "script_url": asset(configs.script_url)
-        }) %}
-    {% else %}
-        {% set configs = configs|merge({
-            "mode": "exact",
-            "elements": id
-        }) %}
-    {% endif %}
 
     <script type="text/javascript">
-        jQuery(document).ready(function($) {
-            var $configs = {{ configs|json_encode|raw }};
+    	jQuery(document).ready(function($) {
+
+        	var $field = $('#{{ id }}');
+    	{% block genemu_tinymce_javascript_prototype %}
+
+    	{% if configs.script_url is defined %}
+            {% set configs = configs|merge({
+                "script_url": asset(configs.script_url)
+            }) %}
+        {% else %}
+            {% set configs = configs|merge({
+                "mode": "exact",
+                "elements": id
+            }) %}
+        {% endif %}
+    		
+    		var $configs = {{ configs|json_encode|raw }};
 
         {%- if configs.script_url is defined %}
-
-            $('#{{ id }}').tinymce($configs);
+        	$field.tinymce($configs);
         {% else %}
-
             tinyMCE.init($configs);
         {% endif -%}
 
+        
+        {% endblock genemu_tinymce_javascript_prototype %}
         });
     </script>
+    
 {% endspaceless %}
 {% endblock genemu_tinymce_javascript %}
 
