--- a/Resources/views/Form/jquery_layout.html.twig
+++ b/Resources/views/Form/jquery_layout.html.twig
@@ -91,6 +91,9 @@
 
     <script type="text/javascript">
         jQuery(document).ready(function($) {
+			var $field = $('#{{ id }}');
+        	{% block genemu_jquerydate_javascript_prototype %}
+            
             var $configs = $.extend({
                 minDate: new Date({{ min_year }}, 0, 1),
                 maxDate: new Date({{ max_year }}, 11, 31)
@@ -110,7 +113,10 @@
             }
         {% endif %}
 
-            $('#{{ id }}').datepicker($configs);
+        	$field.datepicker($configs);
+
+            {% endblock genemu_jquerydate_javascript_prototype %}
+            
         });
     </script>
 {% endspaceless %}
